# teleye

./: README.md  docker-compose.yaml
app/: .gitignore  celery_worker.py  celeryconfig.py  conftest.py  env.example  generate_session_string.py  main.py  pyproject.toml  pytest.ini
app/core/: config.py  instrumentator.py  models.py
app/routers/: auth_router.py  channel_router.py  image_router.py  listener_router.py  message_router.py  smart_sync_router.py  sync_router.py
app/services/: auth_service.py  dependancies.py  elasticsearch.py  listener_service.py  minio_service.py  smart_sync_service.py  sync_service.py  user_service.py
app/tasks/: channel_tasks.py  listener_tasks.py  message_tasks.py  smart_sync_tasks.py  sync_tasks.py
app/tests/: test_channel_router.py  test_image_router.py  test_listener_router.py  test_message_router.py  test_smart_sync_router.py  test_sync_router.py
monitor/grafana/provisioning/dashboards/: celery-dashboard.json  fastapi-dashboard.json
monitor/prometheus/: prometheus.yml
